force-app/main/default/objects/MAS_Field_Mapping__c/MAS_Field_Mapping__c.object-meta.xml
<CustomObject>
    <description>Maps one source SOQL column (or literal) to one target action input parameter.</description>
    <label>MAS Field Mapping</label>
    <pluralLabel>MAS Field Mappings</pluralLabel>
    <nameField>
        <label>Mapping Number</label>
        <type>AutoNumber</type>
        <displayFormat>MAP-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>