force-app/main/default/objects/MAS_Field_Mapping__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>MasterDetail</type>
    <referenceTo>MAS_Configuration__c</referenceTo>
    <relationshipName>Field_Mappings</relationshipName>
    <relationshipLabel>Field Mappings</relationshipLabel>
</CustomField>