force-app/main/default/objects/MAS_Field_Mapping__c/fields/Is_Literal__c.field-meta.xml
<CustomField>
    <fullName>Is_Literal__c</fullName>
    <label>Is Literal</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>When checked, Source Field Name is treated as a literal value passed to every invocation rather than a field on the source record.</description>
</CustomField>