force-app/main/default/objects/MAS_Field_Mapping__c/fields/Target_Parameter_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Parameter_Name__c</fullName>
    <label>Target Parameter Name</label>
    <type>Text</type>
    <length>255</length>
    <description>API name of the Flow input variable or Apex invocable input parameter to receive the value.</description>
</CustomField>